--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-
+<h1>Glavnaya</h1>
+<form action="" method="post" novalidate>
+    {{ form.hidden_tag() }}
+    <p>{{ form.RegSub(type="submit", class="btn btn-primary") }}</p>
+    <p>{{ form.VhodSub(type="submit", class="btn btn-primary") }}</p>
 
 </form>
 {% endblock %}
