--- a/templates/login.html
+++ b/templates/login.html
@@ -22,9 +22,9 @@
     </div>
     {% endfor %}
     </p>
+    <p>{{ form.submit(type="submit", class="btn btn-primary") }} {{ form.remember_me() }} {{ form.remember_me.label
+        }}</p>
     <p>{{ form.tok_but(type="submit", class="btn btn-primary") }}</p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     <div>{{ message }}</div>
 </form>
 {% endblock %}
