Исправлена Ошибка с классами

--- a/templates/lichniy.html
+++ b/templates/lichniy.html
@@ -4,5 +4,6 @@
 <h1>Почта</h1>
 <p>{{ user.email }}</p>
 <a href="/odinochka"><img src="./static/img/img.png"></a>
+<a href="/group"><img src="./static/img/img_1.png"></a>
 </body>
 {% endblock %}
